clusters/managed/devbench/tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools
  namespace: mgd-devbench
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: tools
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tools
    spec:
      containers:
      - name: it-tools
        # renovate: depName=ghcr.io/sharevb/it-tools
        image: ghcr.io/sharevb/it-tools:nightly
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tools-it-tools
  namespace: mgd-devbench
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/instance: tools
