clusters/managed/devbench/tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://tools.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "IT-Tools"
    gethomepage.dev/icon: mdi-tools
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Tools
    gethomepage.dev/weight: "40"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=tools"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`tools.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: tools-it-tools
          port: 8080
